--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "installall": "(cd server && npm i)  & (cd client && yarn)",
-    "seeder": "cd server/src/seeder && (node post & node user)",
-    "start": "(cd client && yarn start) & (cd server && node app.js)"
+   "build": "cd client && yarn && yarn build",
+   "start": "cd server && npm i && npm start"
   },
   "author": "",
   "license": "ISC"
