push heroku with node 15

--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
    "start": "cd server && npm i && npm start"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": "15.x"
+  }
 }
