--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
    "build": "cd client && yarn && yarn build",
-   "start": "cd server && npm i && npm start"
+   "start": "cd server && yarn && yarn start"
   },
   "author": "",
   "license": "ISC",
